--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Mi Proyecto</title>
+  <title>Mi otra Rama del Proyecto</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Bienvenido a Mi Proyecto</h1>
-  <p>Esto es un ejemplo básico de estructura HTML.</p>
+  <p>Esto es un ejemplo básico de estructura la HTML.</p>
 </body>
 </html>
