--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <hr />
     <div class="mapa_boleteria">
       <div>
-        <h2 class="titulo_boleteria">Ubicación 📍</h2>
+        <h2>Ubicación 📍</h2>
         <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20046.504749452462!2d4.352632177427327!3d51.093456793519266!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3ee18dda1c861%3A0xdf44d9e8197edc74!2s2850%20Boom%2C%20B%C3%A9lgica!5e0!3m2!1ses-419!2sco!4v1755616601465!5m2!1ses-419!2sco"
         width="600"
@@ -58,7 +58,7 @@
         ></iframe>
       </div>
       <div class="boleteria">
-        <h2 class="titulo_boleteria">Precios boleteria 🎫</h3>
+        <h2>Precios boleteria 🎫</h3>
         <p>
           Selecciona tu entrada y asegura tu acceso a la experiencia mágica de
           Tomorrowland. Cada ticket incluye acreditación digital y acceso a
@@ -83,17 +83,17 @@
         </table>
       </div>
     </div>
-    <hr>
+    <br>
     <div class="formulario">
       <h2>Formulario de inscripción</h2>
       <p>Para inscribirse por favor llene estos campos.</p>
-      <label for="nombre">Nombre:</label>
+      <label for="nombre">Nombre:</label><br>
       <input type="text" name="" id="nombre" required><br><br>
-      <label for="edad">Edad:</label>
+      <label for="edad">Edad:</label><br>
       <input type="number" name="" id="edad" required min="18"><br><br>
-      <label for="telefono">Telefono:</label>
+      <label for="telefono">Telefono:</label><br>
       <input type="tel" name="" id="telefono" required><br><br>
-      <label for="correo">Correo:</label>
+      <label for="correo">Correo:</label><br>
       <input type="email" name="" id="correo" required><br><br>
       <h3>Tipo de boleta:</h3>
       <label for="vip">VIP:</label>
