--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </section>
 
     <section id="productos" class="productos">
-      <h2>Nuestros catalogo</h2>
+      <h2>Nuestro catalogo</h2>
       <ul>
         <li>
           <h3 id="cafes">Cafés</h3>
